nav-links elements shift fixed #29

--- a/src/components/expandable-list/expandable-list.scss
+++ b/src/components/expandable-list/expandable-list.scss
@@ -4,7 +4,6 @@
 $block: 'expandable-list';
 .#{$block} {
   float: right;
-  max-height: 21px;
 
   &__check {
     position: absolute;
@@ -32,8 +31,11 @@ $block: 'expandable-list';
   &__expand-more {
     @include icon-type;
 
-    min-width: 24px;
-    min-height: 21px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 19.5px;
+    min-height: 18px;
     cursor: pointer;
 
     &::before {
@@ -41,10 +43,11 @@ $block: 'expandable-list';
       display: flex;
       align-items: center;
       justify-content: center;
-      min-width: 24px;
-      min-height: 21px;
+      width: 19.5px;
+      height: 18px;
       color: $font-medium;
       background-color: transparent;
+      transform: translateY(1px);
       content: 'expand_more';
     }
   }
@@ -91,6 +94,7 @@ $block: 'expandable-list';
       right: 0;
       min-width: 44px;
       min-height: 44px;
+      transform: none;
 
       &::before {
         min-width: 44px;
